--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
