--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-pdf/renderer": "^3.4.4",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.7",
     "nodemailer": "^6.9.15",
